--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "base_uri": "http://api.mailhops.com"
-    ,"app_name": "Node App"
+    ,"app_name": "Node App v1.0.0"
     ,"api_version": 1
     ,"api_key": ""
     ,"forecastio_api_key": ""
