--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
   "name": "mailhops",
-  "version": "0.0.4",
+  "version": "2.0.0",
   "description": "A nodejs module for interacting with the MailHops API.",
   "main": "main.js",
-  "dependencies": {
-    "assert": "^1.1.1",
-    "async": "^0.6.2",
-    "lodash": "^2.4.1",
-    "mocha": "^2.2.4",
-    "qs": "^3.1.0",
-    "request": "https://registry.npmjs.org/request/-/request-2.34.0.tgz"
-  },
   "scripts": {
     "test": "mocha"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/avantassel/mailhops-node.git"
+    "url": "git://github.com/mailhops/mailhops-node.git"
   },
   "keywords": [
     "mailhops",
@@ -30,11 +22,11 @@
     "name": "Andrew Van Tassel",
     "email": "andrew@mailhops.com"
   },
-  "license": "GPLv2",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/avantassel/mailhops-node/issues"
+    "url": "https://github.com/mailhops/mailhops-node/issues"
   },
-  "homepage": "https://github.com/avantassel/mailhops-node",
+  "homepage": "https://github.com/mailhops/mailhops-node",
   "_npmUser": {
     "name": "avantassel",
     "email": "andrew@andrewvantassel.com"
@@ -44,5 +36,15 @@
       "name": "avantassel",
       "email": "andrew@mailhops.com"
     }
-  ]
+  ],
+  "dependencies": {
+    "async": "^2.0.1",
+    "lodash": "^4.15.0",
+    "qs": "^6.2.1",
+    "request": "^2.7.4"
+  },
+  "devDependencies": {
+    "assert": "^1.4.1",
+    "mocha": "^3.0.2"
+  }
 }
