--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mailhops",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "A nodejs module for interacting with the MailHops API.",
   "main": "main.js",
   "scripts": {
@@ -26,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/mailhops/mailhops-node/issues"
   },
-  "homepage": "https://github.com/mailhops/mailhops-node",
+  "homepage": "https://mailhops.com",
   "_npmUser": {
     "name": "avantassel",
     "email": "andrew@andrewvantassel.com"
